feat: Add staff info retrieval functionality and update account interface

--- a/template/admin/account.html
+++ b/template/admin/account.html
@@ -24,9 +24,9 @@
           <img src="{% static 'assets/images/windows.jpg' %}" alt="profile" />
         </div>
         <div class="user-data">
-          <p>Osei Michael Nana</p>
-          <p>qwabenamike91@gmail.com</p>
-          <p>Account Department</p>
+          <p id="staff-name"></p>
+          <p id="staff-email"></p>
+          <p id="staff-department"></p>
         </div>
       </div>
       <div class="links">
@@ -35,7 +35,7 @@
           <li>Update Info</li>
         </ul>
         <ul>
-          <li onclick="window.location.href='../login.html'">LogOut</li>
+          <li id="logout">LogOut</li>
         </ul>
       </div>
     </nav>
