feat: Add session expiration alert and handle token retrieval safely

--- a/template/admin/account.html
+++ b/template/admin/account.html
@@ -57,7 +57,7 @@
           {% for student in debtors %}
           <div class="card">
             <p>{{ student.indexNumber }}</p>
-            <p>{{ student.surname }} {{ student.othername }}</p>
+            <p>&nbsp;{{ student.surname }} {{ student.othername }}</p>
             <input type="button" value="Clear student" />
             <!-- Add more student fields as needed -->
           </div>
