feat: Implement student search functionality with filtering by name and level

--- a/template/admin/account.html
+++ b/template/admin/account.html
@@ -98,7 +98,12 @@
       </div>
     </main>
     <aside>
-      <input type="text" name="" id="" placeholder="Search by name..." />
+      <input
+        type="text"
+        name=""
+        id="student-name-search"
+        placeholder="Search by name..."
+      />
       <h1>Student's</h1>
       <input class="active" type="button" value="with debt's" id="btnWD" />
       <input type="button" value="without debt's" id="btnWOD" />
