fix: Add missing protocol to activation link in email template

--- a/template/mail/accountactivation.html
+++ b/template/mail/accountactivation.html
@@ -1,1 +1,1 @@
-Dear student, Here is the activation link: {{domain}}{% url "activate-account"uidb64=uid token=token special=special %}
+Dear student, Here is the activation link: https://{{domain}}{% url "activate-account"uidb64=uid token=token special=special %}
